--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -217,6 +217,7 @@
   "tetra.stats.execute_defensive.tooltip_extended": "Each stack of Severed reduces the target's max health by §e10%%§r and attack damage by §e5%%§r for §e60§r seconds, can stack up to §e3§r times",
   "tetra.stats.slam_defensive.tooltip": "Reduces damage dealt by §e30%% (%s)§r but stun direct targets for §e%s§r seconds and slow AOE targets by §e30%%§r for §e%s§r seconds when used in the offhand",
   "tetra.stats.puncture_defensive.tooltip": "Shove the target away when used in the offhand. Deals §e30%% (%s)§r attack damage and slows the target's movement speed by §e%s%%§r for §e%s§r seconds, punctured targets or targets with less than §e6§7 armor are shoved further",
+  "tetra.stats.pry_defensive.tooltip": "Reduce the target's attack damage by §e%s§r for §e%s§r seconds when used in the offhand, but inflict no armor reduction",
 
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
