--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -17,6 +17,8 @@
   "effect.tetra.pried.tooltip": "Reduces armor by §e%s",
   "effect.tetra.exhausted": "Exhausted",
   "effect.tetra.exhausted.tooltip": "Reduces movement speed by §e%s%%§r, and reduces attack speed and mining speed by §e%s%%",
+  "effect.tetra.steeled": "Steeled",
+  "effect.tetra.steeled.tooltip": "Increases armor by §e%s",
 
   "item.tetra.holo.tooltip1": "At a touch the sphere projects diagrams and glyphs onto nothingness",
   "item.tetra.holo.tooltip2": "§7[§8rmb§7] §8use",
@@ -219,6 +221,7 @@
   "tetra.stats.puncture_defensive.tooltip": "Shove the target away when used in the offhand. Deals §e30%% (%s)§r attack damage and slows the target's movement speed by §e%s%%§r for §e%s§r seconds, punctured targets or targets with less than §e6§7 armor are shoved further",
   "tetra.stats.pry_defensive.tooltip": "Reduce the target's attack damage by §e%s§r for §e%s§r seconds when used in the offhand, but inflict no armor reduction",
   "tetra.stats.overpower_defensive.tooltip": "Only applies §eExhausted§7 (§e1§r stack) on the target when used in the offhand, but damage dealt is reduced to §e%s%% (%s)§r and the cooldown is increased by §e%s%%",
+  "tetra.stats.reap_defensive.tooltip": "Gain §e1§r armor for each enemy hit when used in the offhand, lasts for §e%s§r seconds plus §e%s§r seconds for each enemy killed\n \n§rMainhand use grants §e+10%%§r movement speed per kill for §e%s§r seconds",
 
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
@@ -245,7 +248,7 @@
   "tetra.stats.overpower.tooltip_extended": "Charge time and cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack.",
 
   "tetra.stats.reap": "Reap",
-  "tetra.stats.reap.tooltip": "Hold right-click to charge up a sweeping attack that deals §e%s%% (%s)§f attack damage to entities in an area.\n \n§7Area of Effect: §e%s§7 blocks\n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
+  "tetra.stats.reap.tooltip": "Hold right-click to charge up a sweeping attack that deals §e%s%% (%s)§f attack damage to entities in an area\n \n§7Area of Effect: §e%s§7 blocks\n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
   "tetra.stats.reap.tooltip_extended": "Charge time and cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack.",
 
   "tetra.stats.pry_armor": "Pry arm.",
