--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -210,8 +210,8 @@
 
   "tetra.stats.ability_speed_bonus": "Light",
   "tetra.stats.ability_speed_bonus.tooltip": "Reduces charge time and cooldown by §e%s§r",
-
-  "tetra.stats.ability_speed_bonus_instant.tooltip": "Reduces cooldown by §e%s§r",
+  "tetra.stats.reap_speed_bonus.tooltip": "Reduces charge time and cooldown by §e%s%%§r\n \n§rKilling entities with reap grants §e+10%%§r attack speed per kill for §e%s§r seconds",
+  "tetra.stats.pry_speed_bonus.tooltip": "Reduces cooldown by §e%s§r",
 
   "tetra.stats.ability_defensive": "Defensive Stance",
   "tetra.stats.lunge_defensive.tooltip": "Dodge backwards when used in the offhand",
@@ -221,7 +221,7 @@
   "tetra.stats.puncture_defensive.tooltip": "Shove the target away when used in the offhand. Deals §e30%% (%s)§r attack damage and slows the target's movement speed by §e%s%%§r for §e%s§r seconds, punctured targets or targets with less than §e6§7 armor are shoved further",
   "tetra.stats.pry_defensive.tooltip": "Reduce the target's attack damage by §e%s§r for §e%s§r seconds when used in the offhand, but inflict no armor reduction",
   "tetra.stats.overpower_defensive.tooltip": "Only applies §eExhausted§7 (§e1§r stack) on the target when used in the offhand, but damage dealt is reduced to §e%s%% (%s)§r and the cooldown is increased by §e%s%%",
-  "tetra.stats.reap_defensive.tooltip": "Gain §e1§r armor for each enemy hit when used in the offhand, lasts for §e%s§r seconds plus §e%s§r seconds for each enemy killed\n \n§rMainhand use grants §e+10%%§r movement speed per kill for §e%s§r seconds",
+  "tetra.stats.reap_defensive.tooltip": "Gain §e1§r armor for each enemy hit when used in the offhand, lasts for §e%s§r seconds plus §e%s§r seconds for each enemy killed\n \n§rMainhand use grants §e+20%%§r movement speed per kill for §e%s§r seconds",
 
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
