--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -227,6 +227,7 @@
   "tetra.stats.lunge_overcharge.tooltip": "The ability can be charged up further, each charge step increases the initial velocity by §e%s%%§r and damage dealt by §e%s%% (%s)",
   "tetra.stats.execute_overcharge.tooltip": "The ability can be charged up further, each charge step increases the bonus damage gained from missing health and harmful effects by §e%s%%",
   "tetra.stats.slam_overcharge.tooltip": "The ability can be charged up further, each charge step increases damage dealt by §e%s%% (%s)§r, shockwave range by §e%s§r and direct target knockback by §e%s%%",
+  "tetra.stats.puncture_overcharge.tooltip": "The ability can be charged up further, each charge step increases armor reduction by §e%s%%§r and bleed duration by §e%s§r seconds",
 
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
