--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -19,6 +19,8 @@
   "effect.tetra.exhausted.tooltip": "Movement speed reduced by §e%s%%§r, attack speed and mining speed reduced by §e%s%%",
   "effect.tetra.steeled": "Steeled",
   "effect.tetra.steeled.tooltip": "Increases armor by §e%s",
+  "effect.tetra.small_strength": "Determined",
+  "effect.tetra.small_strength.tooltip": "Increases attack damage by §e%s",
 
   "item.tetra.holo.tooltip1": "At a touch the sphere projects diagrams and glyphs onto nothingness",
   "item.tetra.holo.tooltip2": "§7[§8rmb§7] §8use",
@@ -230,6 +232,7 @@
   "tetra.stats.puncture_overcharge.tooltip": "The ability can be charged up further, each charge step increases armor reduction by §e%s%%§r and bleed duration by §e%s§r seconds",
   "tetra.stats.pry_overcharge.tooltip": "Changes pry into a charged ability that can be charged up further. Each charge step increases damage dealt by §e%s%% (%s)§r and armor reduction by §e%s§r\n \n§7Charge time: §e%s§7 seconds",
   "tetra.stats.overpower_overcharge.tooltip": "The ability can be charged up further, each charge step increases damage dealt by §e%s%% (%s)§r and adds §e%s§r additional stack of §eExhausted§r to both parties",
+  "tetra.stats.reap_overcharge.tooltip": "The ability can be charged up further, each charge step increases damage dealt by §e%s%% (%s)§r, area of effect by §e0.5§r blocks and kill buff duration by §e%s%%\n \n§rEach kill with reap grants §e+1§r attack damage for §e30§r seconds",
 
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
