--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -237,6 +237,7 @@
   "tetra.stats.ability_momentum": "Momentum",
   "tetra.stats.lunge_momentum.tooltip": "Allows the lunge to go higher and hit entities are stunned for §e0.5§r seconds. Fall distance increases damage dealt up to §e+%s§r and the stun duration up to §e+%s§r seconds",
   "tetra.stats.lunge_momentum_extended.tooltip": "Damage increase is at a 1:1 ratio with fall distance, fall damage is reduced for the wielder equal to the amount of damage dealt to the target",
+  "tetra.stats.execute_momentum.tooltip": "Stun the target for §e%s§r seconds, the stun duration is increased based on missing health and harmful effects at the same rate as the attack damage",
 
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
