tweaked momentum mod for puncture

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -239,7 +239,7 @@
   "tetra.stats.lunge_momentum_extended.tooltip": "Damage increase is at a 1:1 ratio with fall distance, fall damage is reduced for the wielder equal to the amount of damage dealt to the target",
   "tetra.stats.execute_momentum.tooltip": "Stun the target for §e%s§r seconds, the stun duration is increased based on missing health and harmful effects at the same rate as the attack damage",
   "tetra.stats.slam_momentum.tooltip": "Targets are stunned and knocked up into the air, single target slam stuns for §e%s§r seconds and ground slam stuns for §e%s§r seconds",
-  "tetra.stats.puncture_momentum.tooltip": "Targets not already affected by puncture are stunned for §e%s§r seconds, the armor of the target increases the stun duration by §e%s§r seconds per point of armor",
+  "tetra.stats.puncture_momentum.tooltip": "Targets not already affected by puncture are knocked into the air, the distance is increased based on the target's armor",
   "tetra.stats.pry_momentum.tooltip": "Stun the target for §e%s§r seconds per pry stack affecting the target",
 
   "tetra.stats.execute": "Execute",
