--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -247,11 +247,11 @@
   "tetra.stats.reap_momentum.tooltip": "Surviving targets are stunned for §e%s§r seconds for each entity killed by reap\n \n§rReap grants knockback immunity for §e%s§r seconds per kill",
 
   "tetra.stats.ability_combo": "Combo",
-  "tetra.stats.lunge_combo.tooltip": "Regular attacks grant combo points the charge time is reduced by §e%s%%§r per combo point and hitting an entity reduces the cooldown by an additional §e%s%%§r per combo point",
+  "tetra.stats.lunge_combo.tooltip": "Regular attacks grant combo points and the lunge's charge time is reduced by §e%s%%§r per combo point, hitting an entity reduces the cooldown by an additional §e%s%%§r per combo point",
   "tetra.stats.lunge_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
   "tetra.stats.execute_combo.tooltip": "Regular attacks grant combo points, the bonus damage gained from missing health and harmful effects is increased by §e%s%%§r per combo point",
   "tetra.stats.execute_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
-  "tetra.stats.slam_combo.tooltip": "Regular attacks grant combo points, ",
+  "tetra.stats.slam_combo.tooltip": "Regular attacks grant combo points, the charge time of slam is reduced by §e%s%%§r per combo point",
   "tetra.stats.slam_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
   "tetra.stats.puncture_combo.tooltip": "Regular attacks grant combo points, ",
   "tetra.stats.puncture_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
