--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -253,7 +253,7 @@
   "tetra.stats.execute_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
   "tetra.stats.slam_combo.tooltip": "Regular attacks grant combo points, the charge time of slam is reduced by §e%s%%§r per combo point",
   "tetra.stats.slam_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
-  "tetra.stats.puncture_combo.tooltip": "Regular attacks grant combo points, ",
+  "tetra.stats.puncture_combo.tooltip": "Regular attacks grant combo points, the duration of the bleed caused by puncture is increased by §e%s§7 seconds per combo point",
   "tetra.stats.puncture_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
   "tetra.stats.pry_combo.tooltip": "Regular attacks grant combo points, ",
   "tetra.stats.pry_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
