added combo mod for the reap ability

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -259,7 +259,7 @@
   "tetra.stats.pry_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
   "tetra.stats.overpower_combo.tooltip": "Regular attacks grant combo points, overpower deals §e+%s%% (%s)§r damage per combo point and has a §e%s%%§r chance per combo point to not exhaust the attacker",
   "tetra.stats.overpower_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
-  "tetra.stats.reap_combo.tooltip": "Regular attacks grant combo points, ",
+  "tetra.stats.reap_combo.tooltip": "Regular attacks grant combo points, reap deals §e+%s%% (%s)§r damage per combo point\n \n§rReap grants §e+10%%§r attack & harvest speed per kill for §e15§r seconds, the duration is increased by §e%s§r seconds per combo point",
   "tetra.stats.reap_combo.tooltip_extended": "This item has to be held in either hand to generate combo points, the combo points are reset when the ability is used or after 30 seconds of not attacking",
 
   "tetra.stats.execute": "Execute",
