added revenge mod for the slam ability

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -267,8 +267,8 @@
   "tetra.stats.lunge_revenge.tooltip_extended": "Entities that have recently attacked you are considered to be revenge targets, a hud indicator appears when looking at a revenge target while wielding an item capable of revenge. Using an ability that leverages revenge resets the revenge status for affected targets. All revenge targets are reset after not being attacked for 30 seconds.",
   "tetra.stats.execute_revenge": "Revel in Pain",
   "tetra.stats.execute_revenge.tooltip": "Execute deals §e%s%%§r more damage if the wielder is affected by any harmful effect",
-  "tetra.stats.slam_revenge.tooltip": "",
-  "tetra.stats.slam_revenge.tooltip_extended": "",
+  "tetra.stats.slam_revenge.tooltip": "Hitting a revenge target with slam stuns them for §e%s§r seconds",
+  "tetra.stats.slam_revenge.tooltip_extended": "Entities that have recently attacked you are considered to be revenge targets, a hud indicator appears when looking at a revenge target while wielding an item capable of revenge. Using an ability that leverages revenge resets the revenge status for affected targets. All revenge targets are reset after not being attacked for 30 seconds.",
   "tetra.stats.puncture_revenge.tooltip": "",
   "tetra.stats.puncture_revenge.tooltip_extended": "",
   "tetra.stats.pry_revenge.tooltip": "",
