added revenge mod for the puncture ability

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -269,8 +269,8 @@
   "tetra.stats.execute_revenge.tooltip": "Execute deals §e%s%%§r more damage if the wielder is affected by any harmful effect",
   "tetra.stats.slam_revenge.tooltip": "Hitting a revenge target with slam stuns them for §e%s§r seconds",
   "tetra.stats.slam_revenge.tooltip_extended": "Entities that have recently attacked you are considered to be revenge targets, a hud indicator appears when looking at a revenge target while wielding an item capable of revenge. Using an ability that leverages revenge resets the revenge status for affected targets. All revenge targets are reset after not being attacked for 30 seconds.",
-  "tetra.stats.puncture_revenge.tooltip": "",
-  "tetra.stats.puncture_revenge.tooltip_extended": "",
+  "tetra.stats.puncture_revenge": "Reversal",
+  "tetra.stats.puncture_revenge.tooltip": "Applies both armor reduction and bleed if the target has more armor than the wielder",
   "tetra.stats.pry_revenge.tooltip": "",
   "tetra.stats.pry_revenge.tooltip_extended": "",
   "tetra.stats.overpower_revenge.tooltip": "",
