--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -271,12 +271,12 @@
   "tetra.stats.slam_revenge.tooltip_extended": "Entities that have recently attacked you are considered to be revenge targets, a hud indicator appears when looking at a revenge target while wielding an item capable of revenge. Using an ability that leverages revenge resets the revenge status for affected targets. All revenge targets are reset after not being attacked for 30 seconds.",
   "tetra.stats.puncture_revenge": "Reversal",
   "tetra.stats.puncture_revenge.tooltip": "Applies both armor reduction and bleed if the target has more armor than the wielder",
-  "tetra.stats.reap_revenge.tooltip": "",
-  "tetra.stats.reap_revenge.tooltip_extended": "",
   "tetra.stats.pry_revenge.tooltip": "Pry deals §e%s%% (%s)§r more damage and applies twice the armor reduction when used on a revenge target",
   "tetra.stats.pry_revenge.tooltip_extended": "Entities that have recently attacked you are considered to be revenge targets, a hud indicator appears when looking at a revenge target while wielding an item capable of revenge. Using an ability that leverages revenge resets the revenge status for affected targets. All revenge targets are reset after not being attacked for 30 seconds.",
   "tetra.stats.overpower_revenge.tooltip": "Overpower deals §e%s%% (%s)§r more damage and does not exhaust the wielder when used on a revenge target",
   "tetra.stats.overpower_revenge.tooltip_extended": "Entities that have recently attacked you are considered to be revenge targets, a hud indicator appears when looking at a revenge target while wielding an item capable of revenge. Using an ability that leverages revenge resets the revenge status for affected targets. All revenge targets are reset after not being attacked for 30 seconds.",
+  "tetra.stats.reap_revenge.tooltip": "Reap deals §e%s%% (%s)§r more damage to revenge targets\n \n§rReap grants §e+1§r attack damage per kill for §e20§r seconds, the duration is increased by §e%s§r seconds per killed revenge target",
+  "tetra.stats.reap_revenge.tooltip_extended": "Entities that have recently attacked you are considered to be revenge targets, a hud indicator appears when looking at a revenge target while wielding an item capable of revenge. Using an ability that leverages revenge resets the revenge status for affected targets. All revenge targets are reset after not being attacked for 30 seconds.",
 
 
   "tetra.stats.execute": "Execute",
