--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -21,6 +21,8 @@
   "effect.tetra.steeled.tooltip": "Increases armor by §e%s",
   "effect.tetra.small_strength": "Determined",
   "effect.tetra.small_strength.tooltip": "Increases attack damage by §e%s",
+  "effect.tetra.small_health": "Bolstered",
+  "effect.tetra.small_health.tooltip": "Max health increased by §e%s",
   "effect.tetra.unwavering": "Unwavering",
   "effect.tetra.unwavering.tooltip": "Immune to knockback",
 
@@ -267,10 +269,10 @@
   "tetra.stats.execute_overextend.tooltip": "Execute drains §e25%%§r of available food and saturation, total damage dealt is increased by §e%s%%§r per point drained",
   "tetra.stats.execute_overextend.tooltip_extended": "10 points would be drained when fully satiated, 2.5 points would be drained when the food bar is half full",
   "tetra.stats.slam_overextend.tooltip": "Increases damage by §e%s%% (%s)§r, shockwave range by §e%s§r blocks and direct target knockback by §e%s%%§r when the food bar is full, but always drains a significant amount of food/saturation on use",
-  "tetra.stats.puncture_overextend.tooltip": "Puncture deals §e%s%% (%s)§r more damage, reduces armor by an additional §e%s%%§r and inflicts §e%s§r seconds longer bleeds when the food bar is full, but always drains a significant amount of food/saturation on use",
+  "tetra.stats.puncture_overextend.tooltip": "Puncture reduces armor by an additional §e%s%%§r and inflicts §e%s§r seconds longer bleeds when the food bar is full, but always drains a significant amount of food/saturation on use",
   "tetra.stats.pry_overextend.tooltip": "Pry reduces armor by twice the usual amount when the food bar is full, but always drains a significant amount of food/saturation on use",
   "tetra.stats.overpower_overextend.tooltip": "Overpower drains a significant amount of food/saturation on use but does not exhaust the wielder as long as the food bar is full",
-  "tetra.stats.reap_overextend.tooltip": "Reap deals double damage to targets below §e%s%%§r health, but always drains a significant amount of food/saturation on use. Food drain is tripled and the wielder gets exhausted unless a target is killed by reap.\n \nReap grants §e+1%%§r max health per kill for §e45§r seconds",
+  "tetra.stats.reap_overextend.tooltip": "Reap deals double damage to targets below §e%s%%§r health as long as the food bar is full, but always drains a significant amount of food/saturation on use. Food drain is tripled and the wielder becomes exhausted unless a target is killed by reap.\n \n§7Reap grants §e+1%%§r max health per kill for §e45§r seconds",
 
   "tetra.stats.ability_revenge": "Revenge",
   "tetra.stats.lunge_revenge.tooltip": "Hitting a revenge target with lunge resets its cooldown",
@@ -310,7 +312,7 @@
   "tetra.stats.puncture.tooltip_extended": "Charge time and cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack.",
 
   "tetra.stats.overpower": "Overpower",
-  "tetra.stats.overpower.tooltip": "Hold right-click to charge up an attack that deals §e%s%% (%s)§f attack damage but barely causes any knockback.\n \n§7Applies §e2§7 stacks of exhausted on the target and §e1§7 stack on the attacker. Each stack reduces movement speed by §e10%%§7 and attack speed and harvest speed by §e5%%§7. The attacker gets exhausted even if the attack fails.\n \n§7Exhausted duration: §e%s§7 seconds\n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
+  "tetra.stats.overpower.tooltip": "Hold right-click to charge up an attack that deals §e%s%% (%s)§f attack damage but barely causes any knockback.\n \n§7Applies §e2§7 stacks of exhausted on the target and §e1§7 stack on the attacker. Each stack reduces movement speed by §e10%%§7 and attack speed and harvest speed by §e5%%§7. The attacker becomes exhausted even if the attack fails.\n \n§7Exhausted duration: §e%s§7 seconds\n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
   "tetra.stats.overpower.tooltip_extended": "Charge time and cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack.",
 
   "tetra.stats.reap": "Reap",
