--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -279,6 +279,7 @@
   "tetra.stats.lunge_exhilaration.tooltip": "Lunge deals §e%s%% (%s)§r more damage and has significantly increased range, but exhausts the wielder if it does not hit an entity",
   "tetra.stats.lunge_exhilaration.tooltip_extended": "The exhausted effect reduces movement speed, attack speed and harvest speed",
   "tetra.stats.execute_exhilaration.tooltip": "If execute kills the target the wielder gains a temporary attack damage increase based on the damage dealt at a rate of §e1§r attack damage per §e%s%%§r of the target's health. The effect duration is based on the target's max health at a rate of §e%s§r seconds per health point up to §e200§r seconds.",
+  "tetra.stats.slam_exhilaration.tooltip": "Ground slam deals §e+%s%% (%s)§r damage for each target hit. Single target slam grants an attack damage increase for §e10§r seconds based on how far the target is knocked back, up to §e%s§r damage at a §e20§r block distance.",
 
   "tetra.stats.ability_revenge": "Revenge",
   "tetra.stats.lunge_revenge.tooltip": "Hitting a revenge target with lunge resets its cooldown",
