added exhilaration mod for the overpower ability

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -282,6 +282,7 @@
   "tetra.stats.slam_exhilaration.tooltip": "Ground slam deals §e+%s%% (%s)§r damage for each target hit. Single target slam grants an attack damage increase for §e10§r seconds based on how far the target is knocked back, up to §e%s§r damage at a §e20§r block distance.",
   "tetra.stats.puncture_exhilaration.tooltip": "The cooldown of puncture is reset if the armor reduction effect brings the target's armor below §e6§r and the duration of the bleed effect is increased by §e%s§r seconds if the target is affected by the armor reduction effect",
   "tetra.stats.pry_exhilaration.tooltip": "The damage of pry is increased by §e+%s%% (%s)§r for each pry stack affecting the target",
+  "tetra.stats.overpower_exhilaration.tooltip": "Exhausted is removed from the wielder if overpower kills the target",
 
   "tetra.stats.ability_revenge": "Revenge",
   "tetra.stats.lunge_revenge.tooltip": "Hitting a revenge target with lunge resets its cooldown",
