--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -23,6 +23,8 @@
   "effect.tetra.small_strength.tooltip": "Increases attack damage by §e%s",
   "effect.tetra.small_health": "Bolstered",
   "effect.tetra.small_health.tooltip": "Max health increased by §e%s",
+  "effect.tetra.small_absorb": "Exhilarated",
+  "effect.tetra.small_absorb.tooltip": "Grants a §e%s§r point absorb shield",
   "effect.tetra.unwavering": "Unwavering",
   "effect.tetra.unwavering.tooltip": "Immune to knockback",
 
@@ -283,6 +285,7 @@
   "tetra.stats.puncture_exhilaration.tooltip": "The cooldown of puncture is reset if the armor reduction effect brings the target's armor below §e6§r and the duration of the bleed effect is increased by §e%s§r seconds if the target is affected by the armor reduction effect",
   "tetra.stats.pry_exhilaration.tooltip": "The damage of pry is increased by §e+%s%% (%s)§r for each pry stack affecting the target",
   "tetra.stats.overpower_exhilaration.tooltip": "Exhausted is removed from the wielder if overpower kills the target",
+  "tetra.stats.reap_exhilaration.tooltip": "The cooldown of reap is reduced by §e%s%%§r if it kills a target\n \n§rReap grants a §e%s§r point absorb shield per kill for §e30§r seconds, subsequent kills with reap refreshes the shield",
 
   "tetra.stats.ability_revenge": "Revenge",
   "tetra.stats.lunge_revenge.tooltip": "Hitting a revenge target with lunge resets its cooldown",
